--- a/sources/scss/layout/_device-menu.scss
+++ b/sources/scss/layout/_device-menu.scss
@@ -14,20 +14,20 @@ $hamburger: ".hamburger";
 
 #{$hamburger} {
     --humburgerbox: #{rem(40px)};
-
-    display: none;
+    
+    display: flex;
     align-items: center;
     justify-content: center;
     width: var(--humburgerbox);
     height: var(--humburgerbox);
     padding: 0;
-    margin: 0;
+    margin: 0 0 0 rem(25px);
     text-align: center;
     background-color: transparent;
     z-index: 999;
-
-    @include mobile {
-        display: flex;
+    
+    @include respond-above('lg') {
+        display: none;
     }
 
     &:hover,
@@ -96,11 +96,11 @@ $hamburger: ".hamburger";
 
 #{$mbnav} {
     position: relative;
-    display: none;
-    z-index: 999;
-
-    @include respond-below(lg) {
-        display: block;
+    display: block;
+    z-index: -1;
+    
+    @include respond-above('lg') {
+        display: none;
     }
 
     &__state {
@@ -135,13 +135,13 @@ $hamburger: ".hamburger";
     }
 
     .menu-wrap {
-        --left-slide: 0;
+        --leftSlide: 0;
 
         position: absolute;
         width: 100%;
         height: 100%;
         top: 0;
-        right: var(--left-slide);
+        right: var(--leftSlide);
         transition: 0.4s ease;
 
         .menu-wrap {
