--- a/sources/scss/layout/_header.scss
+++ b/sources/scss/layout/_header.scss
@@ -1,35 +1,117 @@
 @use "@scss/abstracts/variables" as *;
 @use "@scss/abstracts/function" as *;
 @use "@scss/abstracts/mixins" as *;
-
-/* --- header --- */
+/*--- header ---*/
 .main-header {
 	position: relative;
-	background-color: blueviolet;
-}
+	width: 100%;
+	height: auto;
+	background-color: $white;
+	z-index: 999;
+	padding: 15px 0;
+	box-shadow: 0 0 10px 0 rgba($black, 0.2);
 
-.navigation {
-	word-break: keep-all;
+	.brand {
+		display: block;
+		width: 64px;
+		flex: 0 0 auto;
+	}
 
-	ul {
-		display: flex;
-		margin: 0;
-		padding: 0;
-		list-style: none;
+	/* nav */
+	.nav-menu {
+		flex: 1 1 auto;
+		padding-left: rem(15px);
+	}
+	.navigation {
+		display: none;
+		word-break: keep-all;
+		@include respond-above('lg') {
+			display: block;
+		}
 
-		li {
-			margin: 0 rem(15px);
-			padding: 0;
-			list-style: none;
-
-			a {
-				color: red;
-				text-decoration: none;
-
-				span {
-					display: none;
+		nav {
+			> ul {
+				display: flex;
+				>li {
+					&.menu-item-has-children {
+						>a {
+							&:after {
+								border-right: 1px solid $primary-100;
+								border-top: 1px solid $primary-100;
+								top: 13px;
+								transform: rotate(135deg);
+							}
+						}
+					}
 				}
 			}
 		}
+
+		ul {
+			padding: 0;
+			margin: 0;
+			list-style: none;
+
+			li {
+				padding: 0;
+				list-style: none;
+				&:hover {
+					>ul {
+						opacity: 1;
+						pointer-events: auto;
+					}
+				}
+				&.menu-item-has-children {
+					position: relative;
+					>a {
+						padding-right: 40px;
+						&:after {
+							position: absolute;
+							right: 0;
+							top: 17px;
+							right: 20px;
+							transform: rotate(45deg);
+							width: 10px;
+							height: 10px;
+							border-right: 1px solid $white;
+							border-top: 1px solid $white;
+							content: "";
+						}
+					}
+				}
+
+				a {
+					text-decoration: none;
+					padding: 10px 20px;
+					display: block;
+				}
+			}
+
+			&.sub-menu {
+				position: absolute;
+				left: 0;
+				top: 100%;
+				min-width: 200px;
+				opacity: 0;
+				pointer-events: none;
+				.sub-menu {
+					left: 100%;
+					top: 0;
+				}
+				li {
+					a {
+						display: block;
+						color: $white;
+						background-color: $primary-100;
+					}
+					&:not(:last-child) {
+						a {
+							border-bottom: 1px solid rgba($white, 0.3);
+						}
+					}
+				}
+			}
+		}
+
 	}
 }
