--- a/sources/scss/layout/_footer.scss
+++ b/sources/scss/layout/_footer.scss
@@ -9,5 +9,6 @@
 	align-self: end;
 	line-height: normal;
 	background: $primary-100;
-	padding: 100px 0;
+	padding: 50px 0;
+	text-align: center;
 }
