--- a/sources/scss/abstracts/_mixins.scss
+++ b/sources/scss/abstracts/_mixins.scss
@@ -1,4 +1,5 @@
 @use "@scss/abstracts/variables" as *;
+@use "@scss/abstracts/function" as *;
 @use "sass:map";
 
 // -----------------------------------------------------------------------------
