--- a/sources/scss/style.scss
+++ b/sources/scss/style.scss
@@ -1,6 +1,3 @@
-// Variable and Mixin
-@use "abstracts/core" as abstracts;
-
 // Base
 @use "base/core" as base;
 
@@ -9,3 +6,6 @@
 
 // Layout
 @use "layout/core" as layout;
+
+// Templates
+@use "templates/core" as templates;
